1.0.0_MASTER: UPDATE ~ UI styling fix for toggles and horizontal scrolling bug.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,7 @@ body {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  margin-top: 5vw;
+  margin: 0;
   background: white;
   font-family: "Helvetica Neue", 'Arial', Arial, sans-serif;
   transition: all 0.5s ease-in-out;
@@ -268,7 +268,7 @@ body {
       height: 100%;
       box-sizing: border-box;
       // non-selected background colour
-      background-color: rgb(255, 255, 255);
+      background-color: rgb(185, 225, 255);
       //background: rgba(255, 255, 255, 0.1)
     }
 
